# pacman-42

./: .env  .gitignore  Makefile  pac-man.py  pyproject.toml
config/: config.json
src/: config.py  game.py  level.py  maze_loader.py  renderer.py
src/entities/: ghost.py  player.py
src/utils/: constants.py
