[project]
name = "pac-man"
version = "0.1.0"
description = "Pac-Man game in Python for 42 curriculum"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
]

[tool.mypy]
mypy_path = ["src"]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
